--- a/style.css
+++ b/style.css
@@ -8,15 +8,17 @@ main {
   justify-content: center;
   align-items: center;
   margin-top: 5%;
+
 }
 .container {
   display: flex;
   background-color: rgb(8, 8, 8);
-  height: 640px;
+  height: 605px;
   width: 400px;
   border-radius: 15px;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 10px;
 }
 .brand {
   padding-top: 5px;
@@ -45,6 +47,8 @@ main {
   border: none;
   font-size: 22px;
   border: 4px solid rgb(0, 0, 0);
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
 }
 .top-left-button {
   background-color: rgb(169, 169, 169);
@@ -75,8 +79,20 @@ main {
   color: rgb(105, 105, 105);
 }
 .copyright-area {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 4px;
+}
+@font-face {
+  font-family: "digital7";
+  src: URL("digital-7.ttf") format("truetype");
+}
+.display-area {
+    font-family: digital7;
+}
+.display-area > #digits {
+    font-size: 90px;
+    margin-top: 5px;
+    text-align: right;
 }
